# ceph

./: ceph.spec.in  install-deps.sh  make-dist
admin/: build-doc
debian/: rules
qa/tasks/mgr/dashboard/: test_cephfs.py  test_pool.py  test_rbd.py
src/: mypy.ini  vstart.sh
src/ceph-volume/: CMakeLists.txt
src/cephadm/: CMakeLists.txt  build.sh  cephadm  cephadm.py
src/cephadm/tests/: test_cephadm.py
src/common/: options.cc
src/pybind/mgr/: mgr_module.py  orchestrator.py  tox.ini
src/pybind/mgr/ansible/: module.py
src/pybind/mgr/cephadm/: module.py
src/pybind/mgr/dashboard/: HACKING.rst  __init__.py  module.py  tools.py
src/pybind/mgr/dashboard_v2/: CMakeLists.txt  HACKING.rst  __init__.py  auth.py  module.py  requirements.txt  restresource.py  run-tox.sh  tools.py  tox.ini
src/pybind/mgr/dashboard_v2/controllers/: auth.py  cephfs.py  cluster.py  dashboard.py  rbd_mirroring.py  rbd_nodb.py  tcmu_iscsi.py
src/pybind/mgr/dashboard_v2/frontend/src/app/ceph/block/pool-detail/: pool-detail.component.html
src/pybind/mgr/dashboard_v2/frontend/src/app/ceph/cluster/osd/osd-list/: osd-list.component.html  osd-list.component.ts
src/pybind/mgr/dashboard_v2/frontend/src/app/ceph/performance-counter/services/: table-performance-counter.service.ts
src/pybind/mgr/dashboard_v2/frontend/src/app/core/navigation/navigation/: navigation.component.html
src/pybind/mgr/dashboard_v2/frontend/src/app/shared/components/table/: table.component.html
src/pybind/mgr/dashboard_v2/models/: nodb.py  rbd.py  taskqueue.py
src/pybind/mgr/dashboard_v2/services/: ceph_service.py
src/pybind/mgr/dashboard_v2/tests/: helper.py  rbd-mirroring.sh  test_auth.py  test_cluster.py  test_dashboard.py  test_host.py  test_nodb.py  test_rbd.py  test_rbd_mirroring.py  test_rbd_nodb.py  test_rgw.py  test_send_command_api.py  test_settings.py  test_taskqueue.py  test_tools.py
src/pybind/mgr/deepsea/: module.py
src/python-common/: requirements.txt  setup.py
src/python-common/ceph/: exceptions.py
src/test/: CMakeLists.txt
(+37 files in other folders)
